# PyBotic

./: LICENSE  README.md  pyproject.toml
pybotic/types/: Channel.py  Emoji.py  Message.py  User.py
pybotic/util/: REST.py  gateway.py
tests/: test_emoji.py  test_gateway.py  test_messages.py  test_rest.py  test_user.py
