[tool.poetry]
name = "pybotic"
version = "0.1.0"
description = ""
authors = ["BadPythonCoder <xsare435@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
websocket-client = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
